--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>
         The Great 
         <span class="colorPicker">RGB</span>
-        Color Game
+        Color Guess
     </h1>
 
     <div class="menuBar">
